<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileMiner</string>
    
    <string name="accessibility_service_description">Enable this service to allow MobileMiner to record when net-enabled apps send notifications.</string>
    
    <string name="start_mining_button">Start Mining</string>
    <string name="stop_mining_button">Stop Mining</string>
    <string name="my_data_button">My Data</string>
    <string name="network_default">Network: None</string>
    <string name="no_cell_text">No Cell</string>
    
    <string name="network_sockets_text">Network Sockets:</string>
    <string name="open_text">Open</string>
    <string name="closed_text">Closed</string>
    
    <string name="network_traffic_text">Network Traffic:</string>
    <string name="traffic_tx">TX:</string>
    <string name="traffic_rx">RX:</string>
    
    <string name="title_activity_data">DataActivity</string>
    <string name="my_data_actionbar_title">My Data</string>
    <string name="my_data_database_size">Database Size:</string>
    <string name="my_data_export_data">Export Data</string>
    <string name="my_data_expire_data">Expire Data</string>
    <string name="my_data_cell_locations">My Cell Locations</string>
    <string name="my_data_active_apps">Most Active Apps:</string>
    <string name="my_data_heat_map_dialog">Building a heat-map...</string>
    
    <string name="title_activity_map">MinerMap</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_my_id">My ID</string>
    <string name="action_pds">OpenPDS Settings</string>

    <string name="user_id_legend">Your user-ID is:</string>
    <string name="user_id_clipboard">Copy to the clipboard.</string>
    
    <string name="activity_settings_mine_on_boot">Mine on Boot</string>
    <string name="activity_settings_mine_on_boot_summary">Start collecting data automatically when your device is switched on.</string>

    <string name="activity_settings_use_openpds">Use OpenPDS</string>
    <string name="activity_settings_use_openpds_summary">Send data to an OpenPDS server instead of a CKAN instance with the MobileMiner plugin.</string>
    
    <string name="activity_settings_openpds_registry">OpenPDS Registry</string>
    <string name="activity_settings_openpds_registry_summary">The Location of the OpenPDS Registry Server</string>
    <string name="activity_settings_openpds_registry_title">Set the OpenPDS Registry URL.</string>
    <string name="activity_settings_openpds_registry_message">URL</string>
    <string name="activity_settings_openpds_registry_url">http://10.0.2.2:8000</string>
    
    <!-- <string name="activity_settings_openpds_key">OpenPDS Client Key</string>
    <string name="activity_settings_openpds_key_summary">The Client Key for the Registry Server</string>
    <string name="activity_settings_openpds_key_title">Set the OpenPDS Registry Client Key.</string>
    <string name="activity_settings_openpds_key_message">Key</string>
    <string name="activity_settings_openpds_key_value">fd07c3e7ba390c45c162ccb0f75cf5</string>
 
    <string name="activity_settings_openpds_secret">OpenPDS Client Secret</string>
    <string name="activity_settings_openpds_secret_summary">The Client Secret for the Registry Server</string>
    <string name="activity_settings_openpds_secret_title">Set the OpenPDS Registry Client Secret.</string>
    <string name="activity_settings_openpds_secret_message">Secret</string>
    <string name="activity_settings_openpds_secret_value">c27787038b2299e692dc39c63aed05</string>  -->  
    
    <string name="main_pipeline_config">
        {"@type": "edu.mit.media.openpds.client.funf.OpenPDSPipeline",
        "schedules": {
			"archive": {
				"strict": false,
				"interval": 86405
			},
			"upload": {
				"strict": true,
				"interval": 300
			}
		},
        "data" : [
        	{
        		"@type": "uk.ac.kcl.odo.mobileminer.probes.SocketProbe",
        		"@schedule": {"interval": 1}
        	},
        	{
        		"@type": "uk.ac.kcl.odo.mobileminer.probes.TrafficProbe",
        		"@schedule": {"interval": 1}
        	},
        	{
        		"@type": "uk.ac.kcl.odo.mobileminer.probes.NotificationProbe"
        	}
        ]
        }
    </string>
    
</resources>




    