<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DataActivity" >

        <TextView
            android:id="@+id/dataText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:text="@string/my_data_database_size"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/exportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dataText"
            android:layout_below="@+id/dataText"
            android:onClick="exportData"
            android:text="@string/my_data_export_data" />

        <Button
            android:id="@+id/expireButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dataText"
            android:layout_toRightOf="@+id/exportButton"
            android:onClick="expireData"
            android:text="@string/my_data_expire_data" />

        <Button
            android:id="@+id/myLocationsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/exportButton"
            android:layout_alignRight="@+id/expireButton"
            android:layout_below="@+id/exportButton"
            android:onClick="myLocations"
            android:text="@string/my_data_cell_locations" />

        <TextView
            android:id="@+id/TopAppLegend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/myLocationsButton"
            android:layout_below="@+id/myLocationsButton"
            android:text="@string/my_data_active_apps"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <fragment
            android:id="@+id/activeApps"
            android:name="uk.ac.kcl.odo.mobileminer.activities.fragments.ActiveAppFragment"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:layout_alignLeft="@+id/TopAppLegend"
            android:layout_below="@+id/TopAppLegend"
            tools:layout="@android:layout/list_content" />

</RelativeLayout>
